--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <title>Maranatha Dog Breeders</title>
+        <title>Electric Vehicles Facts Center</title>
         <meta name="title" content="">
         <meta name="description" content="">
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900|Roboto" rel="stylesheet">
@@ -28,7 +28,7 @@
             <div class='show-cart' id='toCart'>
                 <div id='mgoats'></div>
             </div>
-            <h1 class='logo router' data-page='templates/home.html'>Maranatha Dog Breeders</h1>
+            <h1 class='logo router' data-page='templates/home.html'>Electric Vehicles Facts Center</h1>
             <div id='burg'>
                 <div id="menu-icon-wrapper" class="menu-icon-wrapper scaled" style="visibility: hidden">
                      <svg width="1000px" height="1000px">
@@ -49,7 +49,7 @@
         <div id='pageBody'>
             <div class='banner'>
                 <div class='center'>
-                    <h1>Get Your Favorite Pets Now!!</h1>
+                    <h1>Get Informed about Electric Vehicles!!</h1>
                     <div>
                         <button class='explore router' data-page='templates/shop.html'></button>
                         <button id='about'></button>
@@ -60,51 +60,110 @@
             <div id='abt' class='intro'>
                 <div>
                     <div class='img-container'>
-                        <img src='img/bpizza1.jpg'>
+                        <img src='img/tesla2.jpg'>
                     </div>
                     <div class='text-container'>
-                        <p>At Maranatha Dog Breeders we understand that you prefer pedigree and healthy dogs, we thus have ensured that each dog you buy is pure bred and has undergone the necessary vaccinations.</p>
-                        <p>Whether you are looking for a dog to keep as a pet in your house or looking for a guard and protection dog we've got you covered.</p>
+                        
+                        <p>Research has shown that electric cars are better for the environment. They emit less greenhouse gases and air pollutants over their life than a petrol or diesel car. This is even after the production of the vehicle and the generation of the electricity required to fuel them is considered.</p>
+                        <p>To find an Electric Vehicle based on your budget click on the link below</p>
                         <button class='router' data-page='templates/shop.html'></button>
                     </div>
                 </div>
             </div>
+            <div class='electric-fact'>
+                <h2 class='topfacts'>Top Facts on Electric Vehicles</h2>
+                <ol type="1">
+
+                    <li><b>Electric cars aren’t a new concept</b></li>
+                    <p>Although electric cars are thought of as the future of motoring, they’re not actually a new concept. The very first production electric car was built in 1884 by English inventor, Thomas Parker. Parker was responsible for introducing a range of innovations into the UK including the electrification of the London Underground as well as working on electric tramways for a number of cities. By 1897 a fleet of electric taxis was also being used in London. Improvements in petrol and diesel technology marked the end of the popularity of electric cars which has only been revived in the last decade.</p>
+                    <br>
+                    <li><b>A new electric car is registered every nine minutes in the UK</b></li>
+                    <p>At the end of 2018, figures showed the UK electric vehicle market grew for the seventh year in a row, by 19% - that's 59,700 new plug-in electric cars registered in the UK, or one every nine minutes.
+
+                        With more than 63,000 electric cars sold in the first 11 months of 2019, there are now more than 255,000 electric cars on the road as of the end of November 2019, making up 5.8% of total UK new car registrations according to the Society of Motor Manufacturers and Traders (SMMT).</p>
+                        <li><b>There are more electric car charging points than petrol stations</b></li>
+                        <p>As of May 2019, the number of public charge points outnumber petrol stations in the UK. Data from Zap-Map shows that there are now 8,471 charging sites across the UK as opposed to 8,400 petrol stations. In fact, the number of petrol stations is actually decreasing.</p>
+                        <br>
+                        <li><b>You can now charge an electric car at some petrol stations</b></li>
+                        <p>Over the last few years, a number of traditional fuel companies and petrol station operators have entered the electric car market. Companies such as BP, Shell, MFG and Euro Garages are now offering electric car charging facilities and its even possible that you’ll find these on the forecourt right next to the petrol pumps.</p>
+                        <br>
+                        <li><b>Electric cars are no longer silent</b></li>
+                        <p>Until recently one of the joys of driving an electric car is the peace and quiet that they bring to the roads. However, as from July 2019, a new EU rule meant that all new electric and hybrid cars are legally required to emit an artificial noise so that they can be more easily heard by cyclists and pedestrians. The noise kicks in at speeds of 13mph and below. Thankfully the noise is on the exterior of the car so it’s still nice and quiet inside for drivers.</p>
+                        <br>
+                        <li><b>Breaking add miles to your range</b></li>
+                        <p>All-electric cars have regenerative braking which means that every time you break, some electricity goes back into the battery. Braking in fact actually helps you to get more miles from the car, enabling you to drive further. Electric car drivers who are driving down a hill or a mountain will actually have added miles when they reach the bottom.</p>
+                        <br>
+                        <li><b>Green licence plates could be coming</b></li>
+                        <p>Electric cars in the UK could be set to have their own green number plates if government plans go ahead. As part of a drive to promote low emission vehicles, the UK Government is currently considering introducing the special number plates to new electric cars. Special plates for green cars are already in use in countries such as Norway, Canada and China.</p>
+                        <br>
+                        <li><b>The Nissan LEAF is the most popular electric car</b></li>
+                        <p>Since the Nissan LEAF was launched in 2010, over 400,000 have been sold. This makes it the most popular electric car in the world. Now in its second generation, the 100% electric car continues to prove popular with drivers and Nissan tells us that Nissan LEAF drivers have driven their cars over 10 billion kilometres in total. The other great thing? The Nissan LEAF is made in the UK for sales across Europe.</p>
+                        <br>
+                        <li><b>Tesla have introduced a new feature to keep pets cool</b></li>
+                        <p>An interesting new feature of Tesla cars is the recently introduced ‘Dog Mode’. Drivers with pets in the car can use the Overheat Cabin Protection function to keep the car at a cool temperature for pets left inside. Even more clever than that, the car also displays a large message on the centre touchscreen panel which informs passers-by that all is well and the pet is being kept at a comfortable temperature.</p>
+                        <br>
+                        <li><b>How much does it cost to charge an electric car?</b></li>
+                        <p>How much it costs to charge an electric car depends on the type of electric car you drive, the batteries it has and where you buy the electricity from.
+
+                            You can charge your car at home, at a public charging point or at fast-charging points at motorway service stations and each entail slightly different costs. Generally, charging at home is the cheapest but you will probably need to install a charging point.</p>
+                        <br>
+                        <li><b>How far can an electric vehicle go?</b></li>
+                        <p>How far an electric car can go on a single charge varies depending on the car you drive, how you drive it and the conditions in which you drive it – much like a petrol or diesel car, in fact.
+
+                            Most modern electric cars can go well over 100 miles between charges, with the many of the latest cars having a ‘range’ of around 250 miles.</p>
+                        <br>
+                        <li><b>How safe are electric vehicles?</b></li>
+                        <p>Theoretically, they are safer however as any object so big and heavy travelling at speed is always going to carry risks of potential injury for anyone – or anything – it hits. However, research suggests that EVs are actually safer and less likely to catch fire than conventional cars as they don’t carry flammable petrol or diesel.  </p>
+                        <br>
+                </ol>
+            </div>
+            <br>
+            <br>
+            <div class="zap_map"><h2>Find a Charging Point Near you on Zap-Map</h2></div>
+
+            <div class='charge-map'>
+                <a href="https://www.zap-map.com/live/">
+                <img src='img/zap_map.png' class="center">
+            </a>
+            </div>
+            
             <div class='products'>
-                <h2 class='strike'>Top Breeds</h2>
+                <h2 class='strike'>Top Electric Vehicles</h2>
                 <div class='center pc' data-flickity='{"contain": true, "watchCSS": true}'>
-                    <div class='product' data-desc='German shepherd dogs get along well with children and other pets if raised with them, but in keeping with their guarding instincts, they tend to be leery of strangers.
-                    The breed is considered to be smart and easy to train.'>
+                    <div class='product' data-desc='This EV has a top speed of 125 mph. It’s no slouch.
+                        Moreover, it’s the first electric car to really take on the Model X and survive on all fronts. If you are going down the electric SUV route, it’s an important vehicle to consider.'>
                         <div class='p-img'>
-                            <img src='img/bruschetta_l.jpg'>
-                            <h3>German Shepherd</h3>
+                            <img src='img/Jaguar I-PACE.PNG'>
+                            <h3>Jaguar I-PACE</h3>
                         </div>
                         <div class='p-buttons'>
                             <button class='more' data-text="MORE"></button>
-                            <button class='buy' data-product='German Shepherd' data-price='300' data-text="BUY"></button>
+                            <button class='buy' data-product='Jaguar I-PACE' data-price='60,000' data-text="BUY"></button>
                         </div>
-                        <div class='price'>$300</div>
+                        <div class='price'>£60K</div>
                     </div>
-                    <div class='product' data-desc='These dogs are confident, territorial, and prone to pulling and chewing. They need an assertive, experienced owner with plenty of space for a massive dog that needs to exercise.'>
+                    <div class='product' data-desc='Some industry experts called it the first of a ‘second generation’ of electric cars, combining excellent range with a low cost.
+                    This thing will do 300 miles on one charge. That’s impressive. Before its release, you had to pay upwards of £60,000 to own a new car that will go that far before needing a re-juice.'>
                         <div class='p-img'>
-                            <img src='img/pesto_mediterraneo_l.jpg'>
-                             <h3>Boerboel Mastiff</h3>
+                            <img src='img/Hyundai Kona.PNG'>
+                             <h3>Hyundai Kona Electric</h3>
                         </div>
                         <div class='p-buttons'>
                             <button class='more' data-text="MORE"></button>
-                            <button class='buy' data-product='Boerboel Mastiff' data-price='310' data-text="BUY"></button>
+                            <button class='buy' data-product='Hyundai Kona Electric' data-price='£29,100' data-text="BUY"></button>
                         </div>
-                        <div class='price'>$310</div>
+                        <div class='price'>£29K</div>
                     </div>
-                    <div class='product' data-desc='Japanese Spitz dogs are also intelligent, easy to train, low-maintenance, and great with children. They make good apartment dogs, so long as owners meet their exercise needs, and they have fairly low grooming needs, despite the appearance of their gorgeous, white fur. Dogs of this breed are protective of their human families.'>
+                    <div class='product' data-desc='In real world driving conditions the Kia managed 253 miles in one charge – a staggering result. That’s further than a Tesla Model S, and double the VW e-Golf (which is in the same price bracket).'>
                         <div class='p-img'>
-                            <img src='img/salsa_basilico_l.jpg'>
-                             <h3>Japanese Spitz</h3>
+                            <img src='img/Kia e-Niro.PNG'>
+                             <h3>Kia e-Niro</h3>
                         </div>
                         <div class='p-buttons'>
                             <button class='more' data-text="MORE"></button>
-                            <button class='buy' data-product='Japanese Spitz' data-price='250' data-text="BUY"></button>
+                            <button class='buy' data-product='Kia e-Niro' data-price='£34,495' data-text="BUY"></button>
                         </div>
-                        <div class='price'>$250</div>
+                        <div class='price'>£34K</div>
                     </div>
                 </div>
             </div>
@@ -113,17 +172,17 @@
             </div>
             <footer>
                 <div>
-                    <h1 class='router logo' data-page="templates/home.html">Maranatha Dog Breeders</h1>
+                    <h1 class='router logo' data-page="templates/home.html">Electric Vehicles Facts Center</h1>
                     <h2 class='router' data-page="templates/shop.html">Shop <img src='icons/cart3.svg'></h2>
                     <h2 class='router' data-page="templates/contact.html">Contact <img src='icons/0070-envelop.svg'></h2>
                     <h2>Connect with Us <img src='icons/0387-share2.svg'></h2>
                 </div>
             </footer>
         </div>
-        <div class='reveal' id='r1'>JESUS</div>
-        <div class='reveal' id='r2'>IS</div>
-        <div class='reveal' id='r3'>COMING</div>
-        <div class='reveal' id='r4'>AGAIN!!</div>
+        <div class='reveal' id='r1'>OUR</div>
+        <div class='reveal' id='r2'>FUTURE</div>
+        <div class='reveal' id='r3'>is</div>
+        <div class='reveal' id='r4'>GREEN ENERGY!!</div>
 
         <div id='menu'>
             <div id='m1'></div>
@@ -141,7 +200,7 @@
                 <div id='table'>
                     <h2 id='emptyCart'>Your cart is empty!</h2>
                 </div>
-                <div id='total'><h3>Total: $0</h3></div>
+                <div id='total'><h3>Total: £ 0 </h3></div>
                 <div id='bdogs'>
                     <button id='shopMore'></button>
                     <button id='checkout'></button>
@@ -152,13 +211,13 @@
         <div id='moreInfo'>
             <div>
                 <div id='tb'>
-                    <h1 class='strike'>Pet Name</h1>
+                    <h1 class='strike'>EV Name</h1>
                 </div>
                 <div id='mImg' class='m-img'>
-                    <img src='img/bruschetta_l.jpg'>
+                    <img src='img/tesla.jpg'>
                 </div>
                 <div id='moreP'>
-                     <p>Whether you are looking for a dog to keep as a pet in your house or looking for a guard and protection dog we've got you covered.</p>
+                     <p>Whether you are looking for a Tesla or looking for a low to mid-range Electrical Vehicle we've got you covered.</p>
                      <div>
                          <button id='mib' data-product='Salsa Basilico' data-price='15'></button>
                      </div>
@@ -172,19 +231,6 @@
 
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="js/app.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5d0764ec36eab9721117cb98/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
 
     </body>
 </html>
